@@ -1,5 +1,5 @@
-graphics = scale.pstex_t grid.pstex_t scale.pstex grid.pstex thick_evo.eps
-EXTRA_DIST = grid.fig scale.fig $(graphics)
+graphics = scale.pstex_t grid.pstex_t scale.pstex grid.pstex thick_evo.eps grid_ew.eps
+EXTRA_DIST = grid.fig scale.fig grid_ew.dia $(graphics)
 BUILT_SOURCES = $(graphics)
 CLEANFILES = $(BUILT_SOURCES)
 include $(top_srcdir)/doc/make_doc.rules
